fixed mole multiple click bug

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <div class="w-full bg-green-700 h-[10vh]">
     <h1 class="absolute mt-28 w-full text-center text-5xl font-permanentMarker select-none"> Whack-A-Mole!!</h1>
   </div>
-  <div class="bg-green-700 flex justify-center items-center w-full h-[90vh]">
+  <div class="bg-green-700 flex justify-center items-center w-full h-[90vh] select-none">
     <div class="flex justify-center items-center mt-10 gap-10">
       <div class="w-[50rem] grid grid-cols-3 gap-y-2  rounded-lg p-4">
         <div class="mole-div">
