added hammer anim

--- a/public/index.html
+++ b/public/index.html
@@ -15,47 +15,82 @@
     <div class="flex justify-center items-center mt-10 gap-10">
       <div class="w-[50rem] grid grid-cols-3 gap-y-2  rounded-lg p-4">
         <div class="mole-div">
-          <img class="mole mole-1" src="./images/mole.png" alt="">
-          <img class="dirt" src="./images/dirt.png" alt="" />
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+          
+          <img class="mole mole-1" src="./images/mole.png" alt="mole">
+          <img class="dirt" src="./images/dirt.png" alt="dirt" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-2" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
-
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-3" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-4" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-5" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-6" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-7" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-8" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
 
         <div class="mole-div">
+          <div class="hammer-div absolute h-40 z-10">
+            <img class="hammer" src="./images/hammer.png" alt="hammer" class="mole-img" />
+          </div>
+
           <img class="mole mole-9" src="./images/mole.png" alt="">
           <img class="dirt" src="./images/dirt.png" alt="" />
         </div>
