--- a/public/index.html
+++ b/public/index.html
@@ -108,7 +108,8 @@
       </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./controller.js"></script>
+    <script type="module" src="./hammerAnim.js"></script>
+    <script type="module" src="./controller.js"></script>
 </body>
 
 </html>
