--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="./style.css" />
+  <link type="favicon" rel="icon" href="./images/hammer.png" />
   <title>Whack A Mole</title>
 </head>
 
